# encoder_firmware

./: .gitignore  CMakeLists.txt  STM32F401xE.cmake
cmake/: STM32F401xE.cmake  arm-none-eabi-gcc.cmake  gccDownloaderHelper.cmake
include/: IGpio.h  f4Gpio.h  f4GpioMemory.h  parserState.h  processorState.h  serialParser.h  serialParserStates.h  simpleProtocolParser.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  waitForCommandStart.h
ldscripts/: mem.ld  sections.ld
src/: f4GpioMemory.cpp  main.cpp  serialParser.cpp  serialParserStates.cpp  simpleProtocolParser.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  waitForCommandStart.cpp
test/: CMakeLists.txt
test/src/: f4GpioMemoryTest.cpp  f4GpioTest.cpp  simpleProtocolParserTest.cpp  simpleProtocolParserTestLogic.cpp
